build: remove --enable-preview from build scripts and docs